--- a/chencheng-koa/project/package.json
+++ b/chencheng-koa/project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "debug": "^2.6.3",
+    "iconv-lite": "^0.4.24",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
